gitops/cluster-apps/avelin/web/web-bun-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: avelin-web-bun
  namespace: avelin
  labels:
    app: avelin-web-bun
spec:
  replicas: 0
  selector:
    matchLabels:
      app: avelin-web
      runtime: bun
  template:
    metadata:
      labels:
        app: avelin-web
        runtime: bun
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: avelin-web
          image: ghcr.io/avelinapp/web:v0.32.2-bun
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
