gitops/cluster-apps/avelin/web/web-bun-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: avelin-web-bun-svc
  namespace: avelin
  labels:
    app: avelin-web
  annotations:
    traefik.ingress.kubernetes.io/service.sticky.cookie: true
    traefik.ingress.kubernetes.io/service.sticky.cookie.name: traefik_sticky_session
    traefik.ingress.kubernetes.io/service.sticky.cookie.secure: true
    traefik.ingress.kubernetes.io/service.sticky.cookie.samesite: none
    traefik.ingress.kubernetes.io/service.sticky.cookie.httponly: true
spec:
  selector:
    app: avelin-web
    runtime: bun
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
