gitops/cluster-apps/avelin/web/web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: avelin-web-svc
  namespace: avelin
  labels:
    app: avelin-web
spec:
  selector:
    app: avelin-web
    runtime: node
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
